--- a/howto/index.html
+++ b/howto/index.html
@@ -26,7 +26,7 @@
     <link rel="copyright" title="Copyright" href="../copyright.html" />
     <link rel="top" title="Skbtrace v20120916 documentation" href="../index.html" />
     <link rel="next" title="Extending Skbtrace" href="../extending/index.html" />
-    <link rel="prev" title="4. 跟踪事件列表" href="../using/events.html" />
+    <link rel="prev" title="4. Trace events list" href="../using/events.html" />
     <link rel="shortcut icon" type="image/png" href="../static/py.png" />
  
 
@@ -42,7 +42,7 @@
           <a href="../extending/index.html" title="Extending Skbtrace"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../using/events.html" title="4. 跟踪事件列表"
+          <a href="../using/events.html" title="4. Trace events list"
              accesskey="P">previous</a> |</li>
         <li><img src="../_static/py.png" alt=""
                  style="vertical-align: middle; margin-top: -1px"/></li>
@@ -70,7 +70,7 @@
         <div class="sphinxsidebarwrapper">
             <h4>Previous topic</h4>
             <p class="topless"><a href="../using/events.html"
-                                  title="previous chapter">4. 跟踪事件列表</a></p>
+                                  title="previous chapter">4. Trace events list</a></p>
             <h4>Next topic</h4>
             <p class="topless"><a href="../extending/index.html"
                                   title="next chapter">Extending Skbtrace</a></p>
@@ -106,7 +106,7 @@
           <a href="../extending/index.html" title="Extending Skbtrace"
              >next</a> |</li>
         <li class="right" >
-          <a href="../using/events.html" title="4. 跟踪事件列表"
+          <a href="../using/events.html" title="4. Trace events list"
              >previous</a> |</li>
         <li><img src="../_static/py.png" alt=""
                  style="vertical-align: middle; margin-top: -1px"/></li>
@@ -117,7 +117,7 @@
     <div class="footer">
     &copy; <a href="../copyright.html">Copyright</a> 2012, Li Yu.
     <br />
-    Last updated on Sep 17, 2012.
+    Last updated on Oct 22, 2012.
     Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 0.6.2.
     </div>
 
