--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <p>
     Welcome! This is
     the documentation for Skbtrace
-    20120916, last updated Sep 17, 2012.
+    20120916, last updated Oct 28, 2012.
   </p>
   
   <p><strong>Parts of the documentation:</strong></p>
@@ -63,11 +63,11 @@
       <p class="biglink"><a class="biglink" href="tutorial/index.html">Tutorial</a><br/>
          <span class="linkdescr">start here</span></p>
       <p class="biglink"><a class="biglink" href="using/index.html">Using</a><br/>
-         <span class="linkdescr">userland utilties manual</span></p>
+         <span class="linkdescr">user manual for skbtrace and skbparse utility</span></p>
       <p class="biglink"><a class="biglink" href="extending/index.html">Extending</a><br/>
          <span class="linkdescr">extending skbtrace</span></p>
       <p class="biglink"><a class="biglink" href="howto/index.html">HOWTOs</a><br/>
-         <span class="linkdescr">Some quick using examples</span></p>
+         <span class="linkdescr">some quick using examples</span></p>
     </td><td width="50%">
     </td></tr>
   </table>
@@ -134,7 +134,7 @@
     <div class="footer">
     &copy; <a href="copyright.html">Copyright</a> 2012, Li Yu.
     <br />
-    Last updated on Sep 17, 2012.
+    Last updated on Oct 28, 2012.
     Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 0.6.2.
     </div>
 
